Bug 190311. Make nsImageGTK UpdateGC() when it needs to change the clip rect; make it set the correct clip rect. In the view system, make sure VIEW_CLIPPED is set only when needed.